2005-04-12   Theodore Kilgore <kilgota@auburn.edu>

	* postprocess.c: small oops repaired in sq_decompress()	



2005-04-03   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: improvements for compressed mode
	* postprocess.c: improvements for compressed mode	
	* sq905.h: improvements for compressed mode


2005-01-17   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: added Shark SDC-513 and SDC-519
	* postprocess.c: Code cleanup	




2004-12-15   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: added Concord Eye-Q Duo, Sakar Kidz Cam
	(get_file_func): Conditionnalize pre-processing

2003-11-11 Theodore Kilgore <kilgota@auburn.edu>
	
	* postprocess.c: bugfix for release.

2003-11-11 Theodore Kilgore <kilgota@auburn.edu>
	* library.c: added ViviCam 5B and SY-2107C cameras.


2004-10-28  Hubert Figuiere  <hfiguiere@teaser.fr>

	* sq905.c (sq_read_picture_data): Fix build for gcc 2.95
	(bug #1055868)

2003-08-25 Theodore Kilgore <kilgota@auburn.edu>


	* README.913C: Description of Argus DC-1730 0x2770:0x913c camera.
	
	* library.c: Argus DC-1730 0x2770:0x913c added.
	
	* sq905.c: data type corrected in sq_access_reg ( )
	
	* sq905.h: In sq_access_reg ( ) the "index" is an int. Oops. 


2003-06-29 Theodore Kilgore <kilgota@auburn.edu>

	* sq905.c: Major rewrite. Credit to Cedric Cellier 
		<rixed@happyleptic.org> for several improvements, in particular
		sq_rewind ( ), which permits random access to photos on camera. 
	
	* sq905.h: needed changes declared.
	
	* postprocess.c: Anything special done to a photo after download 
		goes here, especially things which are experimental or 
		still not complete. 
	
	* library.c: Big changes. Video clips and capture-preview supported;
		delete-all-photos supported for those SQ cameras which will 
		do it; thumbnails supported for GUI compatibility. 
		
	* README: Updated to describe new capabilities of camlib. 

	* TODO: list of things which still need work. 
	
	* Makefile.am: postprocess.c added as source file.		

